TerminalSavedOutput#2
Last login: Tue Jan  5 20:18:04 on ttys000

The default interactive shell is now zsh.
To update your account to use zsh, please run `chsh -s /bin/zsh`.
For more details, please visit https://support.apple.com/kb/HT208050.
Luiss-MacBook-Pro-3:~ luis$ python3
Python 3.9.1 (v3.9.1:1e5d33e9b9, Dec  7 2020, 12:10:52) 
[Clang 6.0 (clang-600.0.57)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> ^D
Luiss-MacBook-Pro-3:~ luis$ clear




























Luiss-MacBook-Pro-3:~ luis$ ls
Applications		Downloads		Music			SchoolWork
Desktop			Library			Pictures		eclipse
Documents		Movies			Public			eclipse-workspace
Luiss-MacBook-Pro-3:~ luis$ mkdir djangogirls
Luiss-MacBook-Pro-3:~ luis$ ls
Applications		Downloads		Music			SchoolWork		eclipse-workspace
Desktop			Library			Pictures		djangogirls
Documents		Movies			Public			eclipse
Luiss-MacBook-Pro-3:~ luis$ cd djangogirls
Luiss-MacBook-Pro-3:djangogirls luis$ ls
Luiss-MacBook-Pro-3:djangogirls luis$ ls
Luiss-MacBook-Pro-3:djangogirls luis$ python3 -m venv myvenv
ls
Luiss-MacBook-Pro-3:djangogirls luis$ ls
myvenv
Luiss-MacBook-Pro-3:djangogirls luis$ clear






















Luiss-MacBook-Pro-3:djangogirls luis$ ls
myvenv
Luiss-MacBook-Pro-3:djangogirls luis$ cd myvenv
Luiss-MacBook-Pro-3:myvenv luis$ python -m pip install --upgrade pip
/System/Library/Frameworks/Python.framework/Versions/2.7/Resources/Python.app/Contents/MacOS/Python: No module named pip
Luiss-MacBook-Pro-3:myvenv luis$ python3 -m venv myvenv
Luiss-MacBook-Pro-3:myvenv luis$ python -m pip install --upgrade pip
/System/Library/Frameworks/Python.framework/Versions/2.7/Resources/Python.app/Contents/MacOS/Python: No module named pip
Luiss-MacBook-Pro-3:myvenv luis$ python3
Python 3.9.1 (v3.9.1:1e5d33e9b9, Dec  7 2020, 12:10:52) 
[Clang 6.0 (clang-600.0.57)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> python -m pip install --upgrade pip
  File "<stdin>", line 1
    python -m pip install --upgrade pip
              ^
SyntaxError: invalid syntax
>>> ^D
Luiss-MacBook-Pro-3:myvenv luis$ python -m pip install --upgrade pip
/System/Library/Frameworks/Python.framework/Versions/2.7/Resources/Python.app/Contents/MacOS/Python: No module named pip
Luiss-MacBook-Pro-3:myvenv luis$ python --upgrade pip
Unknown option: --
usage: /System/Library/Frameworks/Python.framework/Versions/2.7/Resources/Python.app/Contents/MacOS/Python [option] ... [-c cmd | -m mod | file | -] [arg] ...
Try `python -h' for more information.
Luiss-MacBook-Pro-3:myvenv luis$ Python -m install --upgrade pip
/System/Library/Frameworks/Python.framework/Versions/2.7/Resources/Python.app/Contents/MacOS/Python: No module named install
Luiss-MacBook-Pro-3:myvenv luis$ Python -m install -upgrade pip
/System/Library/Frameworks/Python.framework/Versions/2.7/Resources/Python.app/Contents/MacOS/Python: No module named install
Luiss-MacBook-Pro-3:myvenv luis$ pip install -r requirements.txt
-bash: pip: command not found
Luiss-MacBook-Pro-3:myvenv luis$ pip install -r requirements.txt
-bash: pip: command not found
Luiss-MacBook-Pro-3:myvenv luis$ python -m install --upgrade pip
/System/Library/Frameworks/Python.framework/Versions/2.7/Resources/Python.app/Contents/MacOS/Python: No module named install
Luiss-MacBook-Pro-3:myvenv luis$ python -m install --upgrade pip
/System/Library/Frameworks/Python.framework/Versions/2.7/Resources/Python.app/Contents/MacOS/Python: No module named install
Luiss-MacBook-Pro-3:myvenv luis$ ls
bin		include		lib		pyvenv.cfg
Luiss-MacBook-Pro-3:myvenv luis$ cd bin
Luiss-MacBook-Pro-3:bin luis$ ls
Activate.ps1		activate.fish		pip			python
activate		easy_install		pip3			python3
activate.csh		easy_install-3.9	pip3.9			python3.9
Luiss-MacBook-Pro-3:bin luis$ python -m install --upgrade pip
/System/Library/Frameworks/Python.framework/Versions/2.7/Resources/Python.app/Contents/MacOS/Python: No module named install
Luiss-MacBook-Pro-3:bin luis$ ls
Activate.ps1		activate.fish		pip			python
activate		easy_install		pip3			python3
activate.csh		easy_install-3.9	pip3.9			python3.9
Luiss-MacBook-Pro-3:bin luis$ cd pip
-bash: cd: pip: Not a directory
Luiss-MacBook-Pro-3:bin luis$ 
Luiss-MacBook-Pro-3:bin luis$ 
Luiss-MacBook-Pro-3:bin luis$ 
Luiss-MacBook-Pro-3:bin luis$ 
Luiss-MacBook-Pro-3:bin luis$ 
Luiss-MacBook-Pro-3:bin luis$ 
Luiss-MacBook-Pro-3:bin luis$ 
Luiss-MacBook-Pro-3:bin luis$ 
Luiss-MacBook-Pro-3:bin luis$ python -m pip install
/System/Library/Frameworks/Python.framework/Versions/2.7/Resources/Python.app/Contents/MacOS/Python: No module named pip
Luiss-MacBook-Pro-3:bin luis$ python3 -m install --upgrade pip
/Library/Frameworks/Python.framework/Versions/3.9/bin/python3: No module named install
Luiss-MacBook-Pro-3:bin luis$ pip -V
-bash: pip: command not found
Luiss-MacBook-Pro-3:bin luis$ python pip -V
Traceback (most recent call last):
  File "pip", line 5, in <module>
    from pip._internal.cli.main import main
ImportError: No module named pip._internal.cli.main
Luiss-MacBook-Pro-3:bin luis$ python -m install pip
/System/Library/Frameworks/Python.framework/Versions/2.7/Resources/Python.app/Contents/MacOS/Python: No module named install
Luiss-MacBook-Pro-3:bin luis$ python -m <install> pip
-bash: install: No such file or directory
Luiss-MacBook-Pro-3:bin luis$ clear

Luiss-MacBook-Pro-3:bin luis$ python -m pip install
/System/Library/Frameworks/Python.framework/Versions/2.7/Resources/Python.app/Contents/MacOS/Python: No module named pip
Luiss-MacBook-Pro-3:bin luis$ python -m ensurepip
Looking in links: /var/folders/l6/l9wqcfzx3ss3_v4chylpsmgr0000gn/T/tmpjl9pW6
Requirement already satisfied: setuptools in /System/Library/Frameworks/Python.framework/Versions/2.7/Extras/lib/python (41.0.1)
Collecting pip
Installing collected packages: pip
Could not install packages due to an EnvironmentError: [Errno 13] Permission denied: '/Library/Python/2.7/site-packages/pip'
Consider using the `--user` option or check the permissions.

Luiss-MacBook-Pro-3:bin luis$ python -m pip install --upgrade pip
/System/Library/Frameworks/Python.framework/Versions/2.7/Resources/Python.app/Contents/MacOS/Python: No module named pip
Luiss-MacBook-Pro-3:bin luis$ python -m ensurepip
Looking in links: /var/folders/l6/l9wqcfzx3ss3_v4chylpsmgr0000gn/T/tmpn6t68j
Requirement already satisfied: setuptools in /System/Library/Frameworks/Python.framework/Versions/2.7/Extras/lib/python (41.0.1)
Collecting pip
Installing collected packages: pip
Could not install packages due to an EnvironmentError: [Errno 13] Permission denied: '/Library/Python/2.7/site-packages/pip'
Consider using the `--user` option or check the permissions.

Luiss-MacBook-Pro-3:bin luis$ python -m ensurepip --user
Looking in links: /var/folders/l6/l9wqcfzx3ss3_v4chylpsmgr0000gn/T/tmpYmkJDC
Requirement already satisfied: setuptools in /System/Library/Frameworks/Python.framework/Versions/2.7/Extras/lib/python (41.0.1)
Collecting pip
Installing collected packages: pip
Successfully installed pip-18.1
Luiss-MacBook-Pro-3:bin luis$ python -m pip install --upgrade pip
Collecting pip
  Downloading https://files.pythonhosted.org/packages/54/eb/4a3642e971f404d69d4f6fa3885559d67562801b99d7592487f1ecc4e017/pip-20.3.3-py2.py3-none-any.whl (1.5MB)
    100% |████████████████████████████████| 1.5MB 4.2MB/s 
Installing collected packages: pip
  Found existing installation: pip 18.1
    Uninstalling pip-18.1:
      Successfully uninstalled pip-18.1
  Rolling back uninstall of pip
Could not install packages due to an EnvironmentError: [Errno 13] Permission denied: '/Library/Python/2.7/site-packages/pip'
Consider using the `--user` option or check the permissions.

You are using pip version 18.1, however version 20.3.3 is available.
You should consider upgrading via the 'pip install --upgrade pip' command.
Luiss-MacBook-Pro-3:bin luis$ python -m pip install --upgrade pip --user
Collecting pip
  Using cached https://files.pythonhosted.org/packages/54/eb/4a3642e971f404d69d4f6fa3885559d67562801b99d7592487f1ecc4e017/pip-20.3.3-py2.py3-none-any.whl
Installing collected packages: pip
  Found existing installation: pip 18.1
    Uninstalling pip-18.1:
      Successfully uninstalled pip-18.1
Successfully installed pip-20.3.3
Luiss-MacBook-Pro-3:bin luis$ 
